tests/NormalTests/paczka1/fuzzy1/92896649.err
Error in line 1: vNrKg S486 15,0
Error in line 4: o9s5vY S468 98,0
Error in line 3: vNrKg A34 79,4
Error in line 18: A3 A3 88,3
Error in line 19: A3 A3 172,2
Error in line 16: 5sNj A3 57,2
Error in line 20: 5sNj S486 69,8
Error in line 33: ifWBUCrf4Bm S486 83,1
Error in line 36: ifWBUCrf4Bm S468 90,9
